Neofetch config update

--- a/neofetch/current.config
+++ b/neofetch/current.config
@@ -1,9 +1,3 @@
-#!/usr/bin/env bash
-#
-# Neofetch config file
-# https://github.com/dylanaraps/neofetch
-
-
 # See this wiki page for more info:
 # https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 print_info() {
@@ -11,12 +5,12 @@ print_info() {
     info underline
 
     info "OS" distro
-    #info "Model" model
+    #info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
     info "Packages" packages
     info "Shell" shell
-    info "Resolution" resolution
+    #info "Resolution" resolution
     info "DE" de
     info "WM" wm
     info "WM Theme" wm_theme
@@ -28,15 +22,16 @@ print_info() {
     info "GPU" gpu
     info "Memory" memory
 
-    # info "CPU Usage" cpu_usage
-     info "Disk" disk
-     info "Battery" battery
-     info "Font" font
-     info "Song" song
+    # info "GPU Driver" gpu_driver  # Linux/macOS only
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
+    info "Battery" battery
+    info "Font" font
+    # info "Song" song
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
-    # info "Install Date" install_date
+    # info "Locale" locale  # This only works on glibc systems.
 
     info line_break
     info cols
@@ -97,7 +92,23 @@ os_arch="on"
 # on:   '2 days, 10 hours, 3 mins'
 # off:  '2 days, 10 hours, 3 minutes'
 # tiny: '2d 10h 3m'
-uptime_shorthand="off"
+uptime_shorthand="on"
+
+
+# Packages
+
+
+# Show/Hide Package Manager names.
+#
+# Default: 'tiny'
+# Values:  'on', 'tiny' 'off'
+# Flag:    --package_managers
+#
+# Example:
+# on:   '998 (pacman), 8 (flatpak), 4 (snap)'
+# tiny: '908 (pacman, flatpak, snap)'
+# off:  '908'
+package_managers="on"
 
 
 # Shell
@@ -138,19 +149,28 @@ shell_version="on"
 # NOTE: Any file in '/sys/devices/system/cpu/cpu0/cpufreq' can be used as a value.
 speed_type="bios_limit"
 
-# Shorten the output of the CPU function
+# CPU speed shorthand
 #
 # Default: 'off'
-# Values:  'on', 'off', 'tiny', 'name', 'speed'
-# Flag:    --cpu_shorthand
+# Values: 'on', 'off'.
+# Flag:    --speed_shorthand.
+# NOTE: This flag is not supported in systems with CPU speed less than 1 GHz
 #
 # Example:
 # on:    'i7-6500U (4) @ 3.1GHz'
-# off:   'Intel i7-6500U (4) @ 3.1GHz'
-# tiny:  'i7-6500U (4)'
-# name:  'Intel i7-6500U (4)'
-# speed: '3.1GHz'
-cpu_shorthand="off"
+# off:   'i7-6500U (4) @ 3.100GHz'
+speed_shorthand="off"
+
+# Enable/Disable CPU brand in output.
+#
+# Default: 'on'
+# Values:  'on', 'off'
+# Flag:    --cpu_brand
+#
+# Example:
+# on:   'Intel i7-6500U'
+# off:  'i7-6500U (4)'
+cpu_brand="on"
 
 # CPU Speed
 # Hide/Show CPU speed.
@@ -185,7 +205,9 @@ cpu_cores="logical"
 # Default: 'off'
 # Values:  'C', 'F', 'off'
 # Flag:    --cpu_temp
-# Supports: Linux
+# Supports: Linux, BSD
+# NOTE: For FreeBSD and NetBSD-based systems, you'll need to enable
+#       coretemp kernel module. This only supports newer Intel processors.
 #
 # Example:
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
@@ -292,6 +314,7 @@ gtk3="on"
 public_ip_host="http://ident.me"
 
 
+
 # Disk
 
 
@@ -317,7 +340,7 @@ disk_show=('/')
 # What to append to the Disk subtitle.
 #
 # Default: 'mount'
-# Values:  'mount', 'name'
+# Values:  'mount', 'name', 'dir'
 # Flag:    --disk_subtitle
 #
 # Example:
@@ -326,13 +349,72 @@ disk_show=('/')
 #
 # mount:  'Disk (/): 74G / 118G (66%)'
 #         'Disk (/mnt/Local Disk): 74G / 118G (66%)'
+#         'Disk (/mnt/Videos): 74G / 118G (66%)'
+#
+# dir:    'Disk (/): 74G / 118G (66%)'
+#         'Disk (Local Disk): 74G / 118G (66%)'
+#         'Disk (Videos): 74G / 118G (66%)'
 disk_subtitle="mount"
 
 
 # Song
 
 
-# Print the Artist and Title on separate lines
+# Manually specify a music player.
+#
+# Default: 'auto'
+# Values:  'auto', 'player-name'
+# Flag:    --music_player
+#
+# Available values for 'player-name':
+#
+# amarok
+# audacious
+# banshee
+# bluemindo
+# clementine
+# cmus
+# deadbeef
+# deepin-music
+# dragon
+# elisa
+# exaile
+# gnome-music
+# gmusicbrowser
+# Google Play
+# guayadeque
+# iTunes
+# juk
+# lollypop
+# mocp
+# mopidy
+# mpd
+# pogo
+# pragha
+# qmmp
+# quodlibet
+# rhythmbox
+# sayonara
+# smplayer
+# spotify
+# Spotify
+# tomahawk
+# vlc
+# xmms2d
+# yarock
+music_player="auto"
+
+# Format to display song information.
+#
+# Default: '%artist% - %album% - %title%'
+# Values:  '%artist%', '%album%', '%title%'
+# Flag:    --song_format
+#
+# Example:
+# default: 'Song: Jet - Get Born - Sgt Major'
+song_format="%artist% - %album% - %title%"
+
+# Print the Artist, Album and Title on separate lines
 #
 # Default: 'off'
 # Values:  'on', 'off'
@@ -340,36 +422,17 @@ disk_subtitle="mount"
 #
 # Example:
 # on:  'Artist: The Fratellis'
+#      'Album: Costello Music'
 #      'Song: Chelsea Dagger'
 #
-# off: 'Song: The Fratellis - Chelsea Dagger'
+# off: 'Song: The Fratellis - Costello Music - Chelsea Dagger'
 song_shorthand="off"
 
-
-# Install Date
-
-
-# Whether to show the time in the output
+# 'mpc' arguments (specify a host, password etc).
 #
-# Default:  'on'
-# Values:   'on', 'off'
-# Flag:     --install_time
-#
-# Example:
-# on:  'Thu 14 Apr 2016 11:50 PM'
-# off: 'Thu 14 Apr 2016'
-install_time="on"
-
-# Set time format in the output
-#
-# Default: '24h'
-# Values:  '12h', '24h'
-# Flag:    --install_time_format
-#
-# Example:
-# 12h: 'Thu 14 Apr 2016 11:50 PM'
-# 24h: 'Thu 14 Apr 2016 23:50'
-install_time_format="24h"
+# Default:  ''
+# Example: mpc_args=(-h HOST -P PASSWORD)
+mpc_args=()
 
 
 # Text Colors
@@ -515,20 +578,21 @@ bar_color_total="distro"
 # infobar: 'info [---=======]'
 # barinfo: '[---=======] info'
 # off:     'info'
-cpu_display="off"
-memory_display="off"
-battery_display="off"
-disk_display="off"
+cpu_display="infobar"
+memory_display="infobar"
+battery_display="infobar"
+disk_display="infobar"
 
 
 # Backend Settings
 
+
 # Image backend.
 #
 # Default:  'ascii'
-# Values:   'ascii', 'caca', 'catimg', 'jp2a', 'iterm2', 'off', 'tycat', 'w3m'
+# Values:   'ascii', 'caca', 'jp2a', 'iterm2', 'off', 'termpix', 'pixterm', 'tycat', 'w3m'
 # Flag:     --backend
-image_backend="iterm2"
+image_backend="ascii"
 
 # Image Source
 #
@@ -585,6 +649,15 @@ ascii_bold="on"
 # Image Options
 
 
+# Image loop
+# Setting this to on will make neofetch redraw the image constantly until
+# Ctrl+C is pressed. This fixes display issues in some terminal emulators.
+#
+# Default:  'off'
+# Values:   'on', 'off'
+# Flag:     --loop
+image_loop="off"
+
 # Thumbnail directory
 #
 # Default: '~/.cache/thumbnails/neofetch'
@@ -619,7 +692,7 @@ crop_offset="center"
 #          --size
 image_size="auto"
 
-# Ggap between image and text
+# Gap between image and text
 #
 # Default: '3'
 # Values:  'num', '-num'
@@ -645,66 +718,11 @@ xoffset=0
 background_color=
 
 
-# Scrot Options
-
-
-# Whether or not to always take a screenshot
-# You can manually take a screenshot with "--scrot" or "-s"
-#
-# Default: 'off'
-# Values:  'on', 'off'
-# Flags:   --scrot
-#          -s
-scrot="off"
-
-# Screenshot Program
-# Neofetch will automatically use whatever screenshot tool
-# is installed on your system.
-#
-# If 'neofetch -v' says that it couldn't find a screenshot
-# tool or you're using a custom tool then you can change
-# the option below to a custom command.
-#
-# Default: 'auto'
-# Values:  'auto' 'cmd -flags'
-# Flag:    --scrot_cmd
-scrot_cmd="auto"
-
-# Screenshot Directory
-# Where to save the screenshots
-#
-# Default: '~/Pictures/'
-# Values:  'dir'
-# Flag:    --scrot_dir
-#
-# Note: Neofetch won't create the directory if it doesn't exist.
-scrot_dir="$HOME/Pictures/"
-
-# Screenshot Filename
-# What to name the screenshots
-#
-# Default: 'neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png'
-# Values:  'string'
-# Flag:    --scrot_name
-scrot_name="neofetch-$(date +%F-%I-%M-%S-${RANDOM}).png"
-
-# Image upload host
-# Where to upload the image.
-#
-# Default: 'teknik'
-# Values:  'imgur', 'teknik'
-# Flag:    --image_host
-#
-# NOTE: If you'd like another image host to be added to Neofetch.
-#       Open an issue on github.
-image_host="teknik"
-
-
 # Misc Options
 
-
-# Config version.
-#
-# NOTE: Don't change this value, neofetch reads this to determine
-# how to handle backwards compatibility.
-config_version="3.0.1"
+# Stdout mode
+# Turn off all colors and disables image backend (ASCII/Image).
+# Useful for piping into another command.
+# Default: 'off'
+# Values: 'on', 'off'
+stdout="off"
